--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "luxon": "^2.0.2",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "passport-unique-token": "^3.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -45,6 +49,8 @@
     "@types/jest": "^27.0.1",
     "@types/luxon": "^2.0.5",
     "@types/node": "^16.0.0",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-unique-token": "^1.0.3",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
