--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "class-validator": "^0.13.1",
     "luxon": "^2.0.2",
     "passport": "^0.5.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "passport-unique-token": "^3.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -49,8 +49,8 @@
     "@types/jest": "^27.0.1",
     "@types/luxon": "^2.0.5",
     "@types/node": "^16.0.0",
+    "@types/passport-http-bearer": "^1.0.37",
     "@types/passport-local": "^1.0.34",
-    "@types/passport-unique-token": "^1.0.3",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
